# pino

./: .codespellignore  .gitlint  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dioxus.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  pre-commit.yml
assets/: dx-components-theme.css  main.css  tailwind.css  theme.css  track-list.js
src/: bridge.rs  cli.rs  db.rs  export.rs  ffmpeg.rs  format.rs  library.rs  main.rs  paths.rs  prefs.rs  scan.rs  sync.rs  task.rs
src/components/: library.rs  log.rs  mod.rs  sync_modal.rs
src/components/input/: component.rs
src/components/select/: component.rs
src/components/sync_modal/: dir_field.rs  mod.rs  pull_section.rs  push_section.rs
src/sync/: import.rs  mod.rs  pdb.rs  pull.rs  push.rs
