[package]
name = "pino"
version = "0.1.0"
authors = ["Lluc Simó Margalef <lluc.simo@protonmail.com>"]
description = "Experimental app to export audio files generating a Pioneer-compatible USB drive"
license = "MPL-2.0"
edition = "2024"

[dependencies]
rekordcrate = { git = "https://github.com/acrilique/rekordcrate", branch = "create-db" }
lofty = "0.23.3"
chrono = "0.4.44"
dioxus = { version = "0.7.4", features = ["desktop"] }
rfd = "0.17.2"
tokio = { version = "1", features = ["sync"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.23.0", features = ["v4"] }
dirs = "6"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
