[package]
name = "pino"
version = "0.2.3"
authors = ["Lluc Simó Margalef <lluc.simo@protonmail.com>"]
description = "Experimental app to export audio files generating a Pioneer-compatible USB drive"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
anyhow = "1"
aoide = { git = "https://gitlab.com/uklotzde/aoide-rs", rev = "c63135b5f5f6f4f36005080fc1e6ce67554d5837", features = ["desktop-app", "backend-embedded", "sqlite-bundled", "media-file", "tokio"] }
rekordcrate = { git = "https://github.com/acrilique/rekordcrate", branch = "create-db" }
unicode-normalization = "0.1"
chrono = "0.4.44"
dioxus = { version = "0.7.6", features = ["desktop"] }
rfd = "0.17.2"
tokio = { version = "1", features = ["sync", "rt"] }
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1.2"
open = "5"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
uuid = { version = "1", features = ["v4"] }
rayon = "1"

[patch.crates-io]
lofty = { git = "https://github.com/acrilique/lofty-rs", branch = "main" }

[lints.clippy]
all = "warn"
pedantic = "warn"
